# ply2lcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/plans/: 2026-02-04-environment-support-impl.md  2026-02-04-input-output-structure-design.md  2026-02-04-input-output-structure-impl.md  2026-02-04-ply2lcc-converter-design.md  2026-02-04-ply2lcc-implementation.md  2026-02-05-cli-refactor-design.md  2026-02-05-parallel-grid-building-design.md  2026-02-05-parallel-grid-building.md  2026-02-05-qt-gui-design.md  2026-02-06-architecture-refactor.md  2026-02-06-collision-mesh-encoding.md  2026-02-06-platform-abstraction-design.md  2026-02-06-platform-abstraction-impl.md
gui/: CMakeLists.txt  convertworker.cpp  convertworker.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
scripts/: build-appimage.sh  deploy-linux.sh  deploy-windows.bat  deploy-windows.ps1
src/: attrs_writer.cpp  attrs_writer.hpp  collision_encoder.cpp  collision_encoder.hpp  compression.cpp  compression.hpp  config.h.in  convert_app.cpp  convert_app.hpp  env_writer.cpp  env_writer.hpp  grid_encoder.cpp  grid_encoder.hpp  lcc_types.cpp  lcc_types.hpp  lcc_writer.cpp  lcc_writer.hpp  main.cpp  meta_writer.cpp  meta_writer.hpp  path_resolution.cpp  path_resolution.hpp  platform.hpp  ply_reader.cpp  ply_reader.hpp  ply_reader_mmap.cpp  ply_reader_mmap.hpp  spatial_grid.cpp  spatial_grid.hpp  splat_buffer.cpp  splat_buffer.hpp  types.hpp
tests/: test_compression.cpp  test_integration.cpp  test_path_resolution.cpp  test_platform.cpp  test_types.cpp
